--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - name: Check out repository
@@ -41,43 +41,5 @@ jobs:
           python -m pip install -r requirements.txt pytest
           python -m pip install -e .
 
-      - name: Validate environment
-        run: python -m pip check
-
       - name: Run tests
-        run: pytest -q
-
-  package:
-    name: Build package
-    runs-on: ubuntu-latest
-    needs: tests
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: pip
-
-      - name: Install build tooling
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build twine
-
-      - name: Build distribution artifacts
-        run: python -m build
-
-      - name: Verify artifacts
-        run: |
-          python -m twine check dist/*
-          python -m pip install --no-deps dist/file_organizer-*.whl
-          python -c "import file_organizer as f; print(f'Version: {f.__version__}')"
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/*
+        run: python -m pytest test_basic.py -v
